# playwright-example

./: .gitignore  .isort.cfg  main.py  pyproject.toml  readme.txt  utils.py
